syntax = "proto3";

package chat.v1;

option go_package = "./chat";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc Connect(ConnectRequest) returns (ConnectResponse);
}

message CreateRoomRequest {
  string user_id = 1;
  string name = 2;
}

message CreateRoomResponse {
  string room_id = 1;
}

message ConnectRequest {
  oneof payload {
    ConnectRoom connect_room = 1;
    Message message = 2;
  }

  message ConnectRoom {
    string room_id = 1;
    string user_id = 2;
    string last_read_message_id = 3;
  }
}

message ConnectResponse {
  oneof payload {
    Message message = 1;
    MessageList message_list = 2;
  }
}

message Message {
  string id = 1;
  string user_id = 2;
  string room_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

message MessageList {
  repeated Message messages = 1;
}